Added inspector.js console.

--- a/main.html
+++ b/main.html
@@ -1,18 +1,23 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
+    
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
     <title>Render - Office</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <!--<script src="lib/split.js"></script>-->
     <script src="lib/babylon.custom.js"></script>
-    <!--<script src="lib/babylon.inspector.js" /></script>-->
+    <script src="lib/babylon.inspector.bundle.js"></script>
+
 </head>
 
 <body>
+    <img id="settings" src="./assets/images/setting.png"></img>
     <canvas id="renderCanvas"></canvas>
     <script src="js/main.js"></script>
+    <script src="js/settings.js"></script>
+
+    
 </body>
 
 </html>
