--- a/main.html
+++ b/main.html
@@ -2,22 +2,28 @@
 <html lang="en">
 
 <head>
-    
+
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
     <title>Render - Office</title>
+
     <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <!-- doc.babylonjs.com -->
     <script src="lib/babylon.custom.js"></script>
     <script src="lib/babylon.inspector.bundle.js"></script>
 
 </head>
 
 <body>
+
     <img id="settings" src="./assets/images/setting.png"></img>
+
     <canvas id="renderCanvas"></canvas>
+
     <script src="js/main.js"></script>
     <script src="js/settings.js"></script>
 
-    
+
 </body>
 
 </html>
