Updated controller, added gridMaterial.js

--- a/main.html
+++ b/main.html
@@ -11,6 +11,8 @@
     <!-- doc.babylonjs.com -->
     <script src="lib/babylon.custom.js"></script>
     <script src="lib/babylon.inspector.bundle.js"></script>
+    <!--<script src="lib/babylon.gridMaterial.js"></script>-->
+
 
 </head>
 
