Updated project structure.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 
     <canvas id="renderCanvas"></canvas>
 
+    <script src="js/scene.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/settings.js"></script>
-
 
 </body>
 
